--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ before_install:
 - wget -q https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.6.zip
 - unzip -q go_appengine_sdk_linux_amd64-1.9.6.zip
 - cd go_appengine
+- ls -la
 - export GAE=$(pwd)
 - popd
 install:
 - cd $TRAVIS_BUILD_DIR
+- ls -la
+- echo $GAE
 - export GOPATH=$TRAVIS_BUILD_DIR
 - export GOHOME=$GAE
 - export PATH=$GAE:$PATH
